prodMetadata/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Locality__c</fullName>
        <description>Name of the closest city or National where applicable</description>
        <inlineHelpText>Name of the closest city or National where applicable</inlineHelpText>
        <label>Locality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albany, NY</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor, MI</fullName>
                </value>
                <value>
                    <fullName>Aspen, CO</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Austin, TX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>Boston, MA</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Charleston, SC</fullName>
                </value>
                <value>
                    <fullName>Chicago, IL</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>Dallas, TX</fullName>
                </value>
                <value>
                    <fullName>Fayetteville, NC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>Ft. Lauderdale, FL</fullName>
                </value>
                <value>
                    <fullName>Garland, TX</fullName>
                </value>
                <value>
                    <fullName>Geneva, IL</fullName>
                </value>
                <value>
                    <fullName>Houston, TX</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>Las Vegas, NV</fullName>
                </value>
                <value>
                    <fullName>Los Angeles, CA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MA_Clean_City__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Country__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_County__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_District__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Postal_Code__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_State__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Street__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Latitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Longitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Quality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MA_Similarity_Level__c</fullName>
        <label>Similarity Level (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOS_Military_Job__c</fullName>
        <formula>Contact.MOS_Military_Job__c</formula>
        <label>MOS/Military Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTime__c</fullName>
        <defaultValue>&quot;00:00 AM - 00:00 PM&quot;</defaultValue>
        <label>Meeting Time</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Level__c</fullName>
        <inlineHelpText>Level of maintenance case requires</inlineHelpText>
        <label>Maintenance Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status (at time of case)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currently Married</fullName>
                </value>
                <value>
                    <fullName>Never Married</fullName>
                </value>
                <value>
                    <fullName>Living with partner</fullName>
                </value>
                <value>
                    <fullName>Separated or Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mental_Health__c</fullName>
        <label>Mental Health</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Military_Retirement_Compensation__c</fullName>
        <label>Military Retirement Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Compensation__c</fullName>
        <label>VA Disability Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Stress_Level__c</fullName>
        <description>Most recent stress level ranked from 1-5</description>
        <inlineHelpText>Most recent stress level ranked from 1-5</inlineHelpText>
        <label>Most Recent Stress Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recently_Used_Education_Benefit__c</fullName>
        <description>Education benefit that was most recently used</description>
        <inlineHelpText>Education benefit that was most recently used</inlineHelpText>
        <label>Most Recently Used Education Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Montgomery GI Bill</fullName>
                </value>
                <value>
                    <fullName>Post 9/11 GI Bill</fullName>
                </value>
                <value>
                    <fullName>Voc Rehab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Targeting_Report_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a report needs to be created to identify mass mailing recipients within a certain locality, radius, or for contacts who meet specific criteria, as per Audience/Product and Email Range</description>
        <inlineHelpText>If a report needs to be created to identify mass mailing recipients within a certain locality, radius, or for contacts who meet specific criteria, as per Audience/Product and Email Range</inlineHelpText>
        <label>New Targeting Report Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Participants__c</fullName>
        <inlineHelpText>Enter any other speakers or organizations planning to participate</inlineHelpText>
        <label>Other Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <inlineHelpText>If you selected &quot;Other&quot; from the Type picklist, you must elaborate as to what type of engagement it is in this field.</inlineHelpText>
        <label>Other Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsourceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider for Outsourcing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Link__c</fullName>
        <label>Page Link</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Job_Title__c</fullName>
        <label>Position / Job Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_17CharMTime__c</fullName>
        <formula>IF(LEN(MTime__c) = 17,
    OR(
         NOT(ISNUMBER(LEFT(MTime__c, 1))),
         VALUE(LEFT(MTime__c, 1)) &lt;= 0,
         VALUE(LEFT(MTime__c, 1)) &gt; 12,
         MID(MTime__c, 2, 1) != &apos;:&apos;,
         NOT(ISNUMBER(MID(MTime__c, 3, 2))),
         VALUE(MID(MTime__c, 3, 2)) &lt; 0,
         VALUE(MID(MTime__c, 3, 2)) &gt; 59,
         AND(UPPER(MID(MTime__c, 5, 6)) != &apos; AM - &apos;, UPPER(MID(MTime__c, 5, 6)) != &apos; PM - &apos;),
         NOT(ISNUMBER(MID(MTime__c, 11, 1))),
         VALUE(MID(MTime__c, 11, 1)) &lt;= 0,
         VALUE(MID(MTime__c, 11, 1)) &gt; 12,
         MID(MTime__c, 12, 1) != &apos;:&apos;,
         NOT(ISNUMBER(MID(MTime__c, 13, 2))),
         VALUE(MID(MTime__c, 13, 2)) &lt; 0,
         VALUE(MID(MTime__c, 13, 2)) &gt; 59,
         AND(UPPER(RIGHT(MTime__c, 3)) != &apos; AM&apos;, UPPER(RIGHT(MTime__c, 3)) != &apos; PM&apos;)
    ),
    FALSE
)</formula>
        <label>Problem_17CharMTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem_18CharMTime__c</fullName>
        <formula>IF(LEN(MTime__c) = 18,
    IF(MID(MTime__c, 2, 1) = &apos;:&apos;,
        OR(
             NOT(ISNUMBER(LEFT(MTime__c, 1))),
             VALUE(LEFT(MTime__c, 1)) &lt;= 0,
             VALUE(LEFT(MTime__c, 1)) &gt; 12,
             NOT(ISNUMBER(MID(MTime__c, 3, 2))),
             VALUE(MID(MTime__c, 3, 2)) &lt; 0,
             VALUE(MID(MTime__c, 3, 2)) &gt; 59,
             AND(UPPER(MID(MTime__c, 5, 6)) != &apos; AM - &apos;, UPPER(MID(MTime__c, 5, 6)) != &apos; PM - &apos;),
             NOT(ISNUMBER(MID(MTime__c, 11, 2))),
             VALUE(MID(MTime__c, 11, 2)) &lt;= 0,
             VALUE(MID(MTime__c, 11, 2)) &gt; 12,
             MID(MTime__c, 13, 1) != &apos;:&apos;,
             NOT(ISNUMBER(MID(MTime__c, 14, 2))),
             VALUE(MID(MTime__c, 14, 2)) &lt; 0,
             VALUE(MID(MTime__c, 14, 2)) &gt; 59,
             AND(UPPER(RIGHT(MTime__c, 3)) != &apos; AM&apos;, UPPER(RIGHT(MTime__c, 3)) != &apos; PM&apos;)
        ),
        IF(MID(MTime__c, 3, 1) = &apos;:&apos;,
            OR(
                 NOT(ISNUMBER(LEFT(MTime__c, 2))),
                 VALUE(LEFT(MTime__c, 2)) &lt;= 0,
                 VALUE(LEFT(MTime__c, 2)) &gt; 12,
                 NOT(ISNUMBER(MID(MTime__c, 4, 2))),
                 VALUE(MID(MTime__c, 4, 2)) &lt; 0,
                 VALUE(MID(MTime__c, 4 ,2)) &gt; 59,
                 AND(UPPER(MID(MTime__c, 6, 6)) != &apos; AM - &apos;, UPPER(MID(MTime__c, 6, 6)) != &apos; PM - &apos;),
                 NOT(ISNUMBER(MID(MTime__c, 12, 1))),
                 VALUE(MID(MTime__c, 12, 1)) &lt;= 0,
                 VALUE(MID(MTime__c, 12, 1)) &gt; 12,
                 MID(MTime__c, 13, 1) != &apos;:&apos;,
                 NOT(ISNUMBER(MID(MTime__c, 14, 2))),
                 VALUE(MID(MTime__c, 14, 2)) &lt; 0,
                 VALUE(MID(MTime__c, 14, 2)) &gt; 59,
                 AND(UPPER(RIGHT(MTime__c, 3)) != &apos; AM&apos;, UPPER(RIGHT(MTime__c, 3)) != &apos; PM&apos;)
            ),
            TRUE
        )
    ),
    FALSE
)</formula>
        <label>Problem_18CharMTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem_19CharMTime__c</fullName>
        <formula>IF(LEN(MTime__c) = 19,
    OR(
         NOT(ISNUMBER(LEFT(MTime__c, 2))),
         VALUE(LEFT(MTime__c, 2)) &lt;= 0,
         VALUE(LEFT(MTime__c, 2)) &gt; 12,
         MID(MTime__c, 3, 1) != &apos;:&apos;,
         NOT(ISNUMBER(MID(MTime__c, 4, 2))),
         VALUE(MID(MTime__c, 4, 2)) &lt; 0,
         VALUE(MID(MTime__c, 4, 2)) &gt; 59,
         AND(UPPER(MID(MTime__c, 6, 6)) != &apos; AM - &apos;, UPPER(MID(MTime__c, 6, 6)) != &apos; PM - &apos;),
         NOT(ISNUMBER(MID(MTime__c, 12, 2))),
         VALUE(MID(MTime__c, 12, 2)) &lt;= 0,
         VALUE(MID(MTime__c, 12, 2)) &gt; 12,
         MID(MTime__c, 14, 1) != &apos;:&apos;,
         NOT(ISNUMBER(MID(MTime__c, 15, 2))),
         VALUE(MID(MTime__c, 15, 2)) &lt; 0,
         VALUE(MID(MTime__c, 15, 2)) &gt; 59,
         AND(UPPER(RIGHT(MTime__c, 3)) != &apos; AM&apos;, UPPER(RIGHT(MTime__c, 3)) != &apos; PM&apos;)
    ),
    FALSE
)</formula>
        <label>Problem_19CharMTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem_Assessment__c</fullName>
        <label>Problem/Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RRRP_Customer_Service__c</fullName>
        <label>RRRP Customer Service</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RRRP_Effectiveness__c</fullName>
        <label>RRRP Effectiveness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RRRP_Quality__c</fullName>
        <label>RRRP Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RRRP_Timeliness__c</fullName>
        <label>RRRP Timeliness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <formula>TEXT(Contact.Rank__c)</formula>
        <label>Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiving_Public_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receiving Public Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiving_VA_Educational_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receiving VA Educational Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_from_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Program that referred the client to us</inlineHelpText>
        <label>Referred from Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases Referred from Program</relationshipLabel>
        <relationshipName>Cases_Referred_from_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Stat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Stat</label>
        <referenceTo>Stat__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you are submitting an External IAVA Engagement, this is the staff manager for the opportunity.</inlineHelpText>
        <label>Requestor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesRequested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_s_Department__c</fullName>
        <formula>Requestor__r.Department</formula>
        <label>Requestor&apos;s Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resources_Required__c</fullName>
        <inlineHelpText>What resources do you anticipate needing? Resources might include funding, southwest vouchers...</inlineHelpText>
        <label>Resources Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Team_Priority__c</fullName>
        <description>field for Salesforce Team use only, 1 is the highest priority</description>
        <inlineHelpText>field for Salesforce Team use only, 1 is the highest priority</inlineHelpText>
        <label>SF Team Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>1 - Low Hanging Fruit</fullName>
                </value>
                <value>
                    <fullName>2 - Low Hanging Fruit</fullName>
                </value>
                <value>
                    <fullName>3 - Low Hanging Fruit</fullName>
                </value>
                <value>
                    <fullName>4 - Low Hanging Fruit</fullName>
                </value>
                <value>
                    <fullName>5 - Low Hanging Fruit</fullName>
                </value>
                <value>
                    <fullName>on deck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Era__c</fullName>
        <description>era(s) that the vet served in</description>
        <inlineHelpText>era(s) that the vet served in</inlineHelpText>
        <label>Service Era</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed OIF/OEF/OND</fullName>
                </value>
                <value>
                    <fullName>Deployed Elsewhere Post 9/11</fullName>
                </value>
                <value>
                    <fullName>Gulf War Era</fullName>
                </value>
                <value>
                    <fullName>Korean War</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post 9/11</fullName>
                </value>
                <value>
                    <fullName>Post 9/11 Era (No Deployments)</fullName>
                </value>
                <value>
                    <fullName>Vietnam Era</fullName>
                </value>
                <value>
                    <fullName>WW2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>TEXT(Contact.Service_Type__c)</formula>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Source_of_Client_Referral__c</fullName>
        <label>Source of Client Referral</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Friend/Family</fullName>
                </value>
                <value>
                    <fullName>IAVA Event</fullName>
                </value>
                <value>
                    <fullName>IAVA Member</fullName>
                </value>
                <value>
                    <fullName>IAVA Staff</fullName>
                </value>
                <value>
                    <fullName>News/Media</fullName>
                </value>
                <value>
                    <fullName>Other resources</fullName>
                </value>
                <value>
                    <fullName>Promo materials</fullName>
                </value>
                <value>
                    <fullName>Referrals from partners</fullName>
                </value>
                <value>
                    <fullName>RRRP Ambassador</fullName>
                </value>
                <value>
                    <fullName>RRRP Card</fullName>
                </value>
                <value>
                    <fullName>Twitter/Facebook</fullName>
                </value>
                <value>
                    <fullName>VetTogether</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stress_Level_at_Intake__c</fullName>
        <description>Stress level at Intake ranked from 1-5</description>
        <inlineHelpText>Stress level at Intake ranked from 1-5</inlineHelpText>
        <label>Stress Level at Intake</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suggested Speaker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>SuggestedSpeakingEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <inlineHelpText>Type of support that is needed</inlineHelpText>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backend Cleanup</fullName>
                </value>
                <value>
                    <fullName>Conference Room Request</fullName>
                </value>
                <value>
                    <fullName>Conga Composer</fullName>
                </value>
                <value>
                    <fullName>Contact import/update</fullName>
                </value>
                <value>
                    <fullName>Data Cleanup</fullName>
                </value>
                <value>
                    <fullName>ExactTarget Email</fullName>
                </value>
                <value>
                    <fullName>ExactTarget Technical Support</fullName>
                </value>
                <value>
                    <fullName>FormAssembly Request</fullName>
                </value>
                <value>
                    <fullName>Investigating Error Message (Salesforce, ExactTarget, FormAssembly, Click&amp;Pledge, etc)</fullName>
                </value>
                <value>
                    <fullName>IT Support - Computer</fullName>
                </value>
                <value>
                    <fullName>IT Support - Phone</fullName>
                </value>
                <value>
                    <fullName>Mass data import/data update</fullName>
                </value>
                <value>
                    <fullName>New Feature</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Salesforce Dashboard</fullName>
                </value>
                <value>
                    <fullName>Salesforce Field</fullName>
                </value>
                <value>
                    <fullName>Salesforce Integration</fullName>
                </value>
                <value>
                    <fullName>Salesforce Page Layout</fullName>
                </value>
                <value>
                    <fullName>Salesforce Report</fullName>
                </value>
                <value>
                    <fullName>Salesforce Training</fullName>
                </value>
                <value>
                    <fullName>Salesforce Validation Rule</fullName>
                </value>
                <value>
                    <fullName>Salesforce Workflow (sends automated emails, makes automated field updates)</fullName>
                </value>
                <value>
                    <fullName>Security/Permissions</fullName>
                </value>
                <value>
                    <fullName>Staff Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Referrals__c</fullName>
        <inlineHelpText>Total Number of Referrals on the Case</inlineHelpText>
        <label>Total Number of Referrals</label>
        <summaryForeignKey>Referral__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <label>Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own car</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Walk</fullName>
                </value>
                <value>
                    <fullName>Friends/Family</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <description>Language (140 characters, cite @iava)</description>
        <inlineHelpText>Language (140 characters, cite @iava)</inlineHelpText>
        <label>Twitter</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_for_Targeting_Report__c</fullName>
        <label>URL for Targeting Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unique_logo_or_image_link__c</fullName>
        <description>For rucksack requests</description>
        <label>Unique logo or image link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VA_Disability_Rating__c</fullName>
        <label>VA Disability Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VA_Disability__c</fullName>
        <label>VA Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA_Rating__c</fullName>
        <label>VA Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Valid_Drivers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Drivers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_Name_and_Address__c</fullName>
        <description>For rucksack requests</description>
        <label>Venue Name and Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Veteran_Family_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran Family Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_are_you_unable_to_do__c</fullName>
        <label>What are you unable to do?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Worth_How_Much_Time__c</fullName>
        <inlineHelpText>How much time would you spend researching the answer yourself? (i.e. how necessary is it to have the most thorough, well documented information)</inlineHelpText>
        <label>Worth How Much Time?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 Minutes</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>2 hours</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>As long as it takes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hasWorkaround__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there a workaround in place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>in_Household__c</fullName>
        <label># in Household</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isBug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this case regarding an error?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>